# learnCppCoding

./: C_Cpp_CheckPlatform.md  README.md
C_coding/hidden_clib/: CMakeLists.txt  README.md
C_coding/hidden_clib/lib/inc/: complex_api.h
C_coding/hidden_clib/lib/src/: CMakeLists.txt  complex.c  complex.h  complex_api.c
C_coding/hidden_clib/test/: CMakeLists.txt  main.c
cppAlgorithms/: GraphEdge.h  readme.md  undirectedGraph.h
design_pattern/Singleton/: Singleton.cpp  Singleton.h  build.sh  main.cpp
design_pattern/Singleton/test/: test_singleton.cpp  test_singleton.h
multithreading/std_thread/: README.md  condition_variable.cpp  condition_variable_class.cpp
threadpool/: README.md
threadpool/multithread_programming/: README.md
tools/clang-format/: .clang-format.c++template  readme.md  test_clang-format.cpp  v12.0.clang-format
tools/cmake-tutorial/demo1/: CMakeLists.txt  main.cpp
tools/cmake-tutorial/demo2/: CMakeLists.txt  main.cpp
tools/cmake-tutorial/demo2/math/: complex.cpp  complex.h
